@@ -1,22 +1,0 @@
-﻿namespace AjHask.Expressions
-{
-    using System;
-    using System.Collections.Generic;
-    using System.Linq;
-    using System.Text;
-
-    public class ConstantExpression : IExpression
-    {
-        private object value;
-
-        public ConstantExpression(object value)
-        {
-            this.value = value;
-        }
-
-        public object Evaluate()
-        {
-            return this.value;
-        }
-    }
-}
